[package]
name = "voyageai-ox"
version = "0.1.0"
edition = "2021"

[features]
default = ["leaky-bucket"]
leaky-bucket = ["dep:leaky-bucket"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "charset",
  "json",
  "rustls-tls",
  "stream",
  "multipart",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
leaky-bucket = { version = "1.0", optional = true }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.63"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }
